Update 2.6.0